--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,15 @@ small a {
   gap: 2px;
 }
 
+.weather-app-temp .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+
+.weather-app-temp .active :hover {
+  text-decoration: none;
+}
+
 .container {
   margin-top: 20px;
   max-width: 600px;
